@@ -5,7 +5,10 @@ VEGAN STABLE VERSIONS
 
 Version 1.15-2 (opened January 14, 2009)
 
-	* merger rev 762, 763, 765: better heuristics for detecting
+	* merged rev 755 to 760: mrpp upgrade: group statistics,
+	classification strength.
+	
+	* merged rev 762, 763, 765: better heuristics for detecting
 	open-ended dissimilarities (Euclidean, Manhattan) and triggering
 	half-change scaling. metaMDS honours 'halfchange'.
 
